--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -410,11 +410,24 @@ Numerosos estudios señalan la importancia de variadas características psicológic
 \subsection{Los Cinco Grandes e intercambio comercial}
 La evidencia muestra que los Tratados de Libre Comercio (TLC) producen un incremento en el intercambio comercial entre los países que lo suscriben \cite{Baier2007,Baier2009}. 
 
-En \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en materia internacional. Líderes extrovertidos con alta predominancia son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y mantenedores del \textit{status quo}.
-
 \citeA{Crichlow2002}  estudia el efecto de ciertos atributos de personalidad de legisladores en Estados Unidos sobre temas de cooperación internacional. Específicamente estudia el apoyo hacia medidas que buscan reducir las barreras al comercio internacional. Encuentra efectos significativos incluso después de controlar por partido e ideología del legislador.
 
 \citeA{Hermann1980} estudia el impacto de 6 características personales de 45 líderes nacionales en sus comportamientos relativos a política exterior. Se encuentra una relación positiva entre la capacidad de un líder para confiar en otros (amabilidad) y su voluntad para realizar compromisos internacionales.
+
+\subsubsection{Extraversión}
+Se han encontrado correlaciones entre el factor extraversión y el volumen de la región del cerebro involucrada en el procesamiento de recompensas a estímulos \cite{DeYoung2010}.
+
+Existe amplia evidencia de la correlación entre optimismo y extraversión \cite{Sharpe2011}.
+
+También existe evidencia que sugiere que individuos más extrovertidos tienen expectativas de éxito más altas y estables en determinados desafíos \cite{Pearce-McCall1986}.
+
+En \cite{Etheredge} se argumenta que líderes más extrovertidos son más proclives a defender y adoptar políticas de cooperación en el ámbito internacional. Líderes extrovertidos con alta predominancia son caracterizados como integradores y conciliadores, mientras que líderes más introvertidos son caracterizados como excluyentes y veladores del \textit{status quo}.
+
+Riesgo de impacto ambiental de TLC \cite{Grossman1991}
+
+TLC aumenta FDI \cite{Buthe2015}
+
+Basados en esta evidencia, conjeturamos que líderes más extrovertidos
 
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %   CAPITULO 2
@@ -496,14 +509,14 @@ El método comúnmente empleado en la literatura consiste en realizar tests de per
 ¿Cómo medir la personalidad de líderes que ya han muerto? En esta sección se describe un método que permite estimar los Cinco Grandes a partir de los discursos políticos pronunciados por los líderes.
 
 \subsection{Muéstrame cómo escribes y te diré quién eres}
-En un creciente número de artículos se ha establecido una relación entre rasgos de personalidad y las palabras empleadas tanto en el discurso oral como en el escrito. \citeA{Pennebaker1999} estudian el uso de palabras en ensayos escritos por estudiantes sobre variados temas. Las palabras son clasificadas en más de 70 categorías léxicas y luego se estudia la frecuencia de cada categoría en los textos. Encuentran que la manera en que la gente se expresa en palabras es altamente estable en el tiempo y en variadas situaciones. Más aun, encuentran correlaciones significativas entre las frecuencias de ciertas categorías léxicas y los Cinco Grandes rasgos de personalidad. Tales factores se observan en la escritura de un individuo como patrones característicos que emergen independientemente del tema del cual esté escribiendo. Trabajos posteriores \cite{mehl2006personality, fast2008personality} también han reportado correlaciones entre el uso de palabras y los Cinco Grandes.
+En un creciente número de artículos se ha establecido una relación entre rasgos de personalidad y las palabras empleadas tanto en el discurso oral como en el escrito. \citeA{Pennebaker1999} estudian el uso de palabras en ensayos escritos por estudiantes sobre variados temas. Las palabras son clasificadas en más de 70 categorías léxicas y luego se estudia la frecuencia de cada categoría en los textos. Encuentran que la manera en que la gente se expresa en palabras es altamente estable en el tiempo y en variadas situaciones. Más aun, encuentran correlaciones significativas entre las frecuencias de ciertas categorías léxicas y los Cinco Grandes rasgos de personalidad. Tales factores se observan en la escritura de un individuo como patrones característicos que emergen independientemente del tema del cual esté escribiendo. Trabajos posteriores \cite{mehl2006personality, fast2008personality} han confirmado y reportado más correlaciones entre el uso de palabras y los Cinco Grandes.
 
 La existencia de correlaciones entre el uso de palabras y la personalidad ha impulsado el desarrollo de modelos de predicción de la personalidad a partir de textos. Artículos como \cite{Golbeck2011,Golbeck2011a,li2010birds} usan textos extraídos de redes sociales, como \textit{tweets} o entradas de blogs, para entrenar modelos de predicción automática de la personalidad. 
 
 En uno de los artículos más citados de la literatura, \citeA{Mairesse2007} desarrollan un método para generar estimadores de los Cinco Grandes a partir de textos. Ellos usan los datos de \citeA{Pennebaker1999} para entrenar modelos estadísticos de predicción de la personalidad. En un reciente trabajo, \citeA{Ramey2014} usan los modelos de \citeA{Mairesse2007} para estimar la personalidad de miembros del Congreso de Estados Unidos a partir de sus discursos en el Congreso. \citeA{Ramey2014} relacionan de forma significativa las personalidades estimadas con el comportamiento de los legisladores, específicamente en cuanto a las tácticas empleadas para presentar proyectos de leyes.
 
 \subsection{De discursos políticos a los Cincos Grandes}
-El uso de modelos de predicción de la personalidad a partir de textos se presenta como un método consistente y sistemático para estimar la personalidad de los líderes nacionales en nuestra muestra. En este trabajo adoptamos la metodología de \citeA{Mairesse2007} y \citeA{Ramey2014} para obtener estimadores de los Cinco Grandes a partir de discursos políticos. La Figura \ref{fig:bf_discurso} muestra un esquema de este método.
+El uso de modelos de predicción de la personalidad a partir de textos aparece como un método consistente y sistemático para estimar la personalidad de los líderes nacionales en nuestra muestra. En este trabajo adoptamos la metodología de \citeA{Mairesse2007} y \citeA{Ramey2014} para obtener estimadores de los Cinco Grandes a partir de discursos políticos. La Figura \ref{fig:bf_discurso} muestra un esquema de este método.
 \begin{figure}[h]
 	\includegraphics[width=\textwidth]{Figures/Figura_BF2.pdf}
 	\caption{Estimando los Cinco Grandes a partir de discursos políticos}
@@ -517,6 +530,14 @@ Luego, se evaluó el contenido de los discursos usando el inventario de palabras 
 Los puntajes en las categorías LIWC de todos los líderes son procesados mediante el programa \textit{Personality Recognizer} desarrollo por \cite{Mairesse2007}. Esta herramienta normaliza los puntajes para  reducir la ponderación de categorías de palabras escasas o no presentes en discursos políticos (por ejemplo palabras obscenas). Estos puntajes normalizados son los que se muestran en la etapa intermedia de la Figura \ref{fig:bf_discurso}. 
 
 Posteriormente, la herramienta \textit{Personality Recognizer} usa estos puntajes para estimar los Cinco Grandes mediante modelos estadísticos. Específicamente, en este trabajo se utilizó el modelo Support Vector Machines for Regression (SMOreg), pues es el que reporta mejor desempeño en la tarea de estimar la personalidad de individuos en pruebas no orales. Este método entrega como resultado final los cinco estimadores medidos en una escala continua de 1 a 7 (etapa final en la Figura \ref{fig:bf_discurso}).
+
+\subsection{Dos posibles objeciones al método}
+Se debe reconocer que la estrategia de usar discursos políticos para medir la personalidad de los líderes presenta dos potenciales dificultades. La primera es la posibilidad de que los líderes pueden tener incentivos para representar una falsa personalidad frente a la opinión pública a través de sus discursos. Probablemente un político prefiere proyectarse como extravertido más que introvertido, amable más que conflictivo, emocionalmente estable más que inestable, responsable más que flojo, o abierto más que estrecho de miras \cite{Ramey2014}. Un líder podría entonces adoptar conscientemente un patrón lingüístico en sus discursos para proyectar los rasgos de personalidad deseados. Pero, aunque es concebible que esto ocurra esto en ocasiones, es más bien difícil de mantener en el tiempo. 
+
+Por otro lado, es razonable suponer que existen indicios lingüísticos relacionados con los rasgos de personalidad que son desconocidos a los líderes, pero que pueden ser capturados un algoritmo de medición de la personalidad, tal como el que ha sido descrito en la sección previa. La aparición de estos indicios lingüísticos en los discursos debería presentar gran variabilidad a través de los líderes, precisamente pues los líderes no son conscientes de su relación con los tipos de personalidad.
+En consecuencia, aun si los políticos intentan sistemáticamente proyectar una personalidad adulterada a través de sus discursos, los estimadores de personalidad obtenidos presentarán una variación que refleja la variación inherente a los verdaderos rasgos de personalidad de los líderes \cite{Ramey2014}.
+
+La segunda potencial objeción ... \cite[p. 187]{Crichlow2005}     
 
 \section{Resultados y verificaciones}
 \subsection{Correlaciones entre los Cinco Grandes}
