--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -814,4 +814,102 @@
 	volume = {24},
 	year = {1980}
 }
+@article{Crichlow2005,
+	abstract = {This article builds upon work linking the psychological characteristics of heads of government to their foreign policy preferences. The primary interest is in determining whether there is a similar link between the psychological characteristics of secretaries of state and foreign ministers and their policy preferences during international disputes. Examining the behavior of a varied set of ministers in a set of 16 decision events, such a link is found. This has important implications for those interested in understanding and predicting foreign policy, and points to the powerful personal influence exerted by these individuals. Additionally, the findings include interesting results dealing with the relative power of various cognitive and personality influences on decision-makers' policy preferences. Cognitive influences and perceptions of the other have a particularly strong effect on the policies promoted by these decision-makers. Implications of these findings for both the political psychology and governmental politics literatures are also discussed. Copyright ©2005 NISA.},
+	author = {Crichlow, S.},
+	doi = {10.1177/0010836705047583},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/Cooperation and Conflict-2005-Crichlow-179-205.pdf:pdf},
+	isbn = {0010836705},
+	issn = {0010-8367},
+	journal = {Cooperation and Conflict},
+	keywords = {Advisors,At-a-distance measurements,Foreign ministers,Psychological characteristics,Secretary of State},
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {179--205},
+	title = {{Psychological Influences on the Policy Choices of Secretaries of State and Foreign Ministers}},
+	url = {http://www.scopus.com/inward/record.url?eid=2-s2.0-30444454539{\&}partnerID=tZOtx3y1},
+	volume = {40},
+	year = {2005}
+}
+@article{DeYoung2010,
+	abstract = {We used a new theory of the biological basis of the Big Five personality traits to generate hypotheses about the association of each trait with the volume of different brain regions. Controlling for age, sex, and whole-brain volume, results from structural magnetic resonance imaging of 116 healthy adults supported our hypotheses for four of the five traits: Extraversion, Neuroticism, Agreeableness, and Conscientiousness. Extraversion covaried with volume of medial orbitofrontal cortex, a brain region involved in processing reward information. Neuroticism covaried with volume of brain regions associated with threat, punishment, and negative affect. Agreeableness covaried with volume in regions that process information about the intentions and mental states of other individuals. Conscientiousness covaried with volume in lateral prefrontal cortex, a region involved in planning and the voluntary control of behavior. These findings support our biologically based, explanatory model of the Big Five and demonstrate the potential of personality neuroscience (i.e., the systematic study of individual differences in personality using neuroscience methods) as a discipline.},
+	author = {DeYoung, Colin G and Hirsh, Jacob B and Shane, Matthew S and Papademetris, Xenophon and Rajeevan, Nallakkandi and Gray, Jeremy R},
+	doi = {10.1177/0956797610370159},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/testing predictions from personality.pdf:pdf},
+	isbn = {1467-9280 (Electronic) 0956-7976 (Linking)},
+	issn = {1467-9280},
+	journal = {Psychol Sci},
+	keywords = {Adolescent,Adult,Brain/*anatomy {\&} histology/physiology,Extraversion (Psychology),Female,Globus Pallidus/anatomy {\&} histology/physiology,Gyrus Cinguli/anatomy {\&} histology/physiology,Hippocampus/anatomy {\&} histology/physiology,Humans,Magnetic Resonance Imaging,Male,Models,Neurological,Parietal Lobe/anatomy {\&} histology/physiology,Personality Inventory,Personality/*physiology,Prefrontal Cortex/anatomy {\&} histology/physiology,Young Adult},
+	mendeley-groups = {Personality},
+	number = {6},
+	pages = {820--828},
+	pmid = {20435951},
+	title = {{Testing predictions from personality neuroscience. Brain structure and the big five}},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20435951},
+	volume = {21},
+	year = {2010}
+}
+@article{Sharpe2011,
+	abstract = {The purpose of the present study was to investigate the relationship between the Big Five factors of personality and dispositional optimism. Data from five samples were collected (Total N= 4332) using three different measures of optimism and five different measures of the Big Five. Results indicated strong positive relationships between optimism and four of the Big Five factors: Emotional Stability, Extraversion, Agreeableness, and Conscientiousness. Agreeableness and Conscientiousness explained additional variance in dispositional optimism over and above Neuroticism and Extraversion, providing evidence for the complexity of optimism. The position of optimism in the larger web of human personality constructs is discussed. ?? 2011.},
+	author = {Sharpe, J. Patrick and Martin, Nicholas R. and Roth, Kelly A.},
+	doi = {10.1016/j.paid.2011.07.033},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/optimism and big five.pdf:pdf},
+	isbn = {0191-8869},
+	issn = {01918869},
+	journal = {Personality and Individual Differences},
+	keywords = {Big Five,Five-Factor Model,Optimism,Personality,Pessimism,Positive psychology},
+	mendeley-groups = {Personality},
+	number = {8},
+	pages = {946--951},
+	publisher = {Elsevier Ltd},
+	title = {{Optimism and the Big Five factors of personality: Beyond Neuroticism and Extraversion}},
+	url = {http://dx.doi.org/10.1016/j.paid.2011.07.033},
+	volume = {51},
+	year = {2011}
+}
+@article{Pearce-McCall1986,
+	abstract = {Recent findings indicate that extraverts are more likely than introverts to continue responding in the face of punishment and frustrating nonreward. To test whether extraverts' expectations for success are similarly resistant to interruption and alteration, 50 introverted and 50 extraverted male undergraduates (as assessed on the Eysenck Personality Questionnaire) were exposed to pretreatment with either a 50{\%} level of noncontingent reward or a 50{\%} level of noncontingent punishment. As predicted, there were significant group by pretreatment interactions on all dependent measures. In comparison to introverts who received the punishment pretreatment, extraverts exposed to the same pretreatment placed larger wagers on their ability to succeed, and reported higher levels of perceived control. In addition, relative to their estimates for the pretreatment task, extraverts exposed to noncontingent punishment increased their expectation for success, whereas introverts exposed to noncontingent punishment decreased their performance expectations. No differences were observed between the 2 groups following pretreatment with noncontingent reward. Results suggest that extraverts are characterized by a distinctive reaction to punishment involving response facilitation. (24 ref) (PsycINFO Database Record (c) 2012 APA, all rights reserved)},
+	author = {Pearce-McCall, Debra and Newman, Joseph P},
+	doi = {10.1037/0022-3514.50.2.439},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/Pearce-McCallNewman1986.pdf:pdf},
+	isbn = {0022-3514 (Print)$\backslash$r0022-3514 (Linking)},
+	issn = {1939-1315},
+	journal = {Journal of Personality and Social Psychology},
+	keywords = {Achievement,Expectations,Extraversion,Introversion,Punishment,noncontingent punishment, expectation of success, },
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {439--446},
+	pmid = {3701589},
+	title = {{Expectation of success following noncontingent punishment in introverts and extraverts.}},
+	url = {10.1037/0022-3514.50.2.439$\backslash$nhttp://proxy.cityu.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true{\&}db=psyh{\&}AN=1986-14512-001{\&}site=ehost-live},
+	volume = {50},
+	year = {1986}
+}
+@article{Grossman1991,
+	abstract = {A reduction in trade barriers generally will affect the environment by expanding the scale of economic activity, by altering the composition of economic activity, and by bringing about a change in the techniques of production. We present empirical evidence to assess the relative magnitudes of these three effects as they apply to further trade liberalization in Mexico. In Section 1. we use comparable measures of three air pollutants in a cross-section of urban areas located in 42 countries to study the relationship between air quality and economic growth. We find for two pollutants (sulfur dioxide and "smoke") that concentrations increase with per capita GDP at low levels of national income, but decrease with GD? growth at higher levels of income. Section 2 studies the determinants of the industry pattern of U.S. imports from Mexico and of value added by Mexico's maquiladora sector. We investigate whether the size of pollution abatement costs in the U.S. industry influences the pattern of international trade and investment. Finally, in Section 3, we use the results from a computable general equilibrium model to study the likely compositional effect of a NAFTA on pollution in Mexico.},
+	author = {Grossman, Gene M and Krueger, Alan B},
+	doi = {10.3386/w3914},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Trade/environmental impacts.pdf:pdf},
+	isbn = {978-0-262-07152-9},
+	journal = {National Bureau of Economic Research Working Paper Series},
+	mendeley-groups = {Personality},
+	number = {3914},
+	pages = {1--57},
+	title = {{Environmental Impacts of a North American Free Trade Agreement}},
+	url = {http://www.nber.org/papers/w3914},
+	volume = {No. 3914},
+	year = {1991}
+}
+@article{Buthe2015,
+	author = {B{\"{u}}the, Tim and Milner, Helen V},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Trade/FTA aumenta FDI.pdf:pdf},
+	journal = {American Journal of Political Science},
+	mendeley-groups = {Economic growth},
+	number = {4},
+	pages = {741--762},
+	title = {{The Politics of Foreign Direct Investment into Developing Countries : Increasing FDI through International Trade Agreements ?}},
+	volume = {52},
+	year = {2008}
+}
+
 
