added some citations

--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -414,6 +414,10 @@ La evidencia muestra que los Tratados de Libre Comercio (TLC) producen un increm
 
 \citeA{Hermann1980} estudia el impacto de 6 características personales de 45 líderes nacionales en sus comportamientos relativos a política exterior. Se encuentra una relación positiva entre la capacidad de un líder para confiar en otros (amabilidad) y su voluntad para realizar compromisos internacionales.
 
+Proteccionismo y seguridad, riesgo \cite{Johnston2013}
+
+By and large, personality affects foreign policy opinions roughly as strongly as traditional factors such as partisan- ship, ideology, and social background \cite{Schoen2007}. Among the traits studied, agreeableness and open- ness render persons more supportive of international cooperation and more skeptical of the use of military force, whereas conscientiousness exhibits reverse effects.
+
 \subsubsection{Extraversión}
 Se han encontrado correlaciones entre el factor extraversión y el volumen de la región del cerebro involucrada en el procesamiento de recompensas a estímulos \cite{DeYoung2010}.
 
