--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -911,5 +911,33 @@
 	volume = {52},
 	year = {2008}
 }
+@article{Johnston2013,
+	abstract = {Despite the increasing salience of issues related to free trade, research on citizen preferences over trade is sparse, and largely limited to economic explanations related to objective exposure. The present paper extends this literature by examining the psychological sources of the protectionist impulse. More specifically, I theoretically and empirically examine how citizens' chronic needs for security and certainty, key traits identified by recent work in the political realm, influence their preferences for protectionism. Examining data from three different national surveys in the U.S. context, I find strong support for the role of these dispositions. In addition to extending our understanding of the antecedents of trade preferences, the present paper has implications for the study of personality and politics, suggesting heterogeneity in the relationship of dispositions to ideology across issue domains. I also discuss the broader implications for American politics, arguing that these findings suggest latent tensions within contemporary party coalitions. [ABSTRACT FROM AUTHOR]},
+	author = {Johnston, Christopher D.},
+	doi = {10.1093/poq/nft004},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/Protectionsm 1.pdf:pdf},
+	issn = {0033362X},
+	journal = {Public Opinion Quarterly},
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {574--585},
+	title = {{Dispositional sources of economic protectionism}},
+	volume = {77},
+	year = {2013}
+}
+@article{Schoen2007,
+	author = {Schoen, Harald},
+	doi = {10.1177/0022002707300180},
+	file = {:C$\backslash$:/Users/Roberto/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Schoen - 2007 - in German Public Opinion.pdf:pdf},
+	isbn = {0022002707},
+	journal = {Journal of Conflict Resolution},
+	keywords = {according to the traditional,domain,foreign policy attitudes,germany,he image of public,in,issues has changed considerably,opinion on foreign policy,personality traits,public opinion,public opinion in this,recent decades,view},
+	mendeley-groups = {Personality},
+	number = {3},
+	pages = {408--431},
+	title = {{Personality Traits and Foreign Policy Attitudes in German Public Opinion}},
+	volume = {51},
+	year = {2007}
+}
 
 
